--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=flase react-scripts build",
+    "build": " set \"CI=false\" react-scripts build",
     
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  
   "eslintConfig": {
     "extends": "react-app"
   },
